--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test:dev": "jest --watch --verbose",
     "build": "rollup -c",
     "prepublish": "yarn run build",
-    "coveralls": "cat ./coverage/lcov.info | coveralls"
+    "report-coverage": "cat ./coverage/lcov.info | codecov"
   },
   "jest": {
     "collectCoverage": true,
@@ -32,7 +32,7 @@
   "devDependencies": {
     "babel-jest": "^19.0.0",
     "babel-preset-env": "^1.4.0",
-    "coveralls": "^2.13.1",
+    "codecov": "^2.1.0",
     "jest-cli": "^19.0.2",
     "rollup": "^0.41.6",
     "rollup-plugin-babel": "^2.7.1",
