--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sleepsort-promise",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "A Promise based implementation of Sleepsort, an O(wtf) sorting algorithm",
   "keywords": [
     "sleepsort",
@@ -21,6 +21,7 @@
   },
   "jest": {
     "collectCoverage": true,
+    "testRegex": "(/test/.*\\.js)$",
     "testPathIgnorePatterns": [
       "/node_modules/",
       "/dist"
